@@ -1,3 +1,8 @@
+2012-06-15  Frank Warmerdam  <warmerdam@google.com>
+
+	* tools/tif2pdf.c, tools/tifdump.c: avoid unitialized variable
+	warnings with clang.
+
 2012-06-15  Tom Lane  <tgl@sss.pgh.pa.us>
 
 	* tools/tiff2pdf.c: Defend against integer overflows while
